--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,1 +1,9 @@
-<p>game works!</p>
+<div class="field">
+
+    <div class="card-stack">
+        <img [ngStyle]="{ 'right.px': i*5 }" *ngFor="let card of [0,1,2,3]; let i = index;" src="/assets/img/cards/card_cover.png">
+        <img (click)="takeCard()" class="top-card" style="right: 20px;" src="/assets/img/cards/card_cover.png">
+        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 20px;" src="/assets/img/cards/spade_1.png">
+    </div>
+
+</div>
