--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,9 +1,24 @@
+<app-player *ngFor="let player of game.players let i = index;" [ngStyle]=" {'top.px': 70 +(i* 90)} " [name]="player" class="player-position" [playerActive]="i == game.currentPlayer">
+
+</app-player>
+
 <div class="field">
 
     <div class="card-stack">
+        <!-- Card Stack-->
         <img [ngStyle]="{ 'right.px': i*5 }" *ngFor="let card of [0,1,2,3]; let i = index;" src="/assets/img/cards/card_cover.png">
         <img (click)="takeCard()" class="top-card" style="right: 20px;" src="/assets/img/cards/card_cover.png">
-        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 20px;" src="/assets/img/cards/spade_1.png">
+        <!-- Stack for played cards-->
+        <img *ngFor="let card of game.playedCards" class="played-card" src="/assets/img/cards/{{ card }}.png">
+        <!-- Current card Animation-->
+        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 20px;" src="/assets/img/cards/{{ currentCard }}.png">
+
     </div>
 
 </div>
+
+<app-game-info [card]="currentCard" class="pin-bottom"></app-game-info>
+
+<button mat-fab color="primary" (click)="openDialog()" class="btn-add">
+    <mat-icon>add</mat-icon>
+  </button>
