--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -26,6 +26,11 @@
     }
 }
 
+.played-card {
+    right: 20px;
+    transform: scale(1.3) translateX(120px) translateY(-200px) rotate(-10deg);
+}
+
 .pick-card {
     transition: all 225ms ease-in-out;
     animation: pick-card-animation 1s ease-in-out;
@@ -45,4 +50,22 @@
     100% {
         transform: scale(1.3) translateX(120px) translateY(-200px) rotate(-10deg);
     }
+}
+
+.player-position {
+    position: absolute;
+    right: 0;
+}
+
+.btn-add {
+    position: absolute;
+    right: 32px;
+    bottom: 32px;
+}
+
+.pin-bottom {
+    position: absolute;
+    bottom: 32px;
+    left: 100px;
+    right: 100px;
 }
