--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -6,12 +6,12 @@
 
     <div class="card-stack">
         <!-- Card Stack-->
-        <img [ngStyle]="{ 'right.px': i*5 }" *ngFor="let card of [0,1,2,3]; let i = index;" src="/assets/img/cards/card_cover.png">
-        <img (click)="takeCard()" class="top-card" style="right: 20px;" src="/assets/img/cards/card_cover.png">
+        <img [ngStyle]="{ 'right.px': i*5 }" *ngFor="let card of [0,1,2,3]; let i = index;" src="assets/img/cards/card_cover.png">
+        <img (click)="takeCard()" class="top-card" style="right: 20px;" src="assets/img/cards/card_cover.png">
         <!-- Stack for played cards-->
-        <img *ngFor="let card of game.playedCards" class="played-card" src="/assets/img/cards/{{ card }}.png">
+        <img *ngFor="let card of game.playedCards" class="played-card" src="assets/img/cards/{{ card }}.png">
         <!-- Current card Animation-->
-        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 20px;" src="/assets/img/cards/{{ currentCard }}.png">
+        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 20px;" src="assets/img/cards/{{ currentCard }}.png">
 
     </div>
 
