--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,5 +1,5 @@
 <div class="player" [class.player-active]="playerActive">
 
-    <img src="/assets/img/profile/1.webp">
+    <img src="assets/img/profile/1.webp">
     <span>{{ name }}</span>
 </div>
