--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -11,13 +11,13 @@
         <!-- Stack for played cards-->
         <img *ngFor="let card of game.playedCards" class="played-card" src="assets/img/cards/{{ card }}.png">
         <!-- Current card Animation-->
-        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 20px;" src="assets/img/cards/{{ currentCard }}.png">
+        <img (click)="takeCard()" *ngIf="game.pickCardAnimation" class="pick-card" style="right: 20px;" src="assets/img/cards/{{ game.currentCard }}.png">
 
     </div>
 
 </div>
 
-<app-game-info [card]="currentCard" class="pin-bottom"></app-game-info>
+<app-game-info [card]="game.currentCard" class="pin-bottom"></app-game-info>
 
 <button mat-fab color="primary" (click)="openDialog()" class="btn-add">
     <mat-icon>add</mat-icon>
