--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -62,6 +62,9 @@
     position: absolute;
     right: 32px;
     bottom: 32px;
+    @media(max-width: 720px) {
+        bottom: 100px;
+    }
 }
 
 .pin-bottom {
@@ -69,4 +72,32 @@
     bottom: 32px;
     left: 100px;
     right: 100px;
+    @media(max-width: 720px) {
+        left: 0;
+        right: 0;
+        bottom: 0;
+    }
+}
+
+.scroll-container {
+    overflow-x: auto;
+    overflow-y: hidden;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    display: flex;
+    app-player-mobile {
+        margin-left: 8px;
+        margin-right: 8px;
+    }
+}
+
+app-player,
+app-player-mobile {
+    cursor: pointer;
+    &:hover {
+        transition: all 225ms ease-in-out;
+        filter: brightness(1.15);
+    }
 }
