--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,29 @@
 body {
     margin: 0;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+html {
+    overflow: hidden;
+}
+
+@media(max-width: 720px) {
+    .hide-mobile {
+        display: none;
+    }
+}
+
+@media(min-width: 720px) {
+    .hide-desktop {
+        display: none;
+    }
+}
