--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -101,3 +101,17 @@ app-player-mobile {
         filter: brightness(1.15);
     }
 }
+
+.game-over {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img {
+        width: 300px;
+    }
+}
+
+.preloadImage {
+    opacity: 0;
+    z-index: -99;
+}
