--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,4 +1,4 @@
-<app-player (click)="editPlayer(i)" *ngFor="let player of game.players let i = index;" [ngStyle]=" {'top.px': 70 +(i* 90)} " [name]="player" class="player-position hide-mobile" [playerActive]="i == game.currentPlayer" [image]="game.player_images[i]">
+<app-player (click)="editPlayer(i)" *ngFor="let player of game.players let i = index;" [ngStyle]=" {'top.px': 30 +(i* 60)} " [name]="player" class="player-position hide-mobile" [playerActive]="i == game.currentPlayer" [image]="game.player_images[i]">
 
 </app-player>
 
@@ -8,14 +8,22 @@
     </app-player-mobile>
 </div>
 
-<div class="field ">
+<div *ngIf="gameOver" class="game-over">
+    <img src="assets/img/game_over.svg">
+</div>
+
+
+<div *ngIf="!gameOver" class="field">
 
     <div class="card-stack ">
+        <!--Karte Vorladen-->
+        <img class="preloadImage" src="assets/img/cards/{{ game.stack[game.stack.length-1]}}.png ">
         <!-- Card Stack-->
         <img [ngStyle]="{ 'right.px': i*5 } " *ngFor="let card of [0,1,2,3]; let i=index; " src="assets/img/cards/card_cover.png ">
         <img (click)="takeCard() " class="top-card " style="right: 20px; " src="assets/img/cards/card_cover.png ">
         <!-- Stack for played cards-->
         <img *ngFor="let card of game.playedCards " class="played-card " src="assets/img/cards/{{ card }}.png ">
+
         <!-- Current card Animation-->
         <img (click)="takeCard() " *ngIf="game.pickCardAnimation " class="pick-card " style="right: 20px; " src="assets/img/cards/{{ game.currentCard }}.png ">
 
@@ -23,8 +31,8 @@
 
 </div>
 
-<app-game-info [card]="game.currentCard" class="pin-bottom"></app-game-info>
+<app-game-info *ngIf="!gameOver" [card]="game.currentCard" class="pin-bottom"></app-game-info>
 
-<button mat-fab color="primary" (click)="openDialog()" class="btn-add">
+<button *ngIf="!gameOver" mat-fab color="primary" (click)="openDialog()" class="btn-add">
     <mat-icon>add</mat-icon>
   </button>
