--- a/src/app/player-mobile/player-mobile.component.html
+++ b/src/app/player-mobile/player-mobile.component.html
@@ -1,5 +1,5 @@
 <div class="player" [class.player-active]="playerActive">
     <span>{{ name }}</span>
-    <img src="assets/img/profile/1.webp">
+    <img src="assets/img/profile/{{image}}">
 
 </div>
