--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -1,4 +1,5 @@
 .player {
+    overflow: hidden;
     display: flex;
     align-items: center;
     background-color: rgb(120, 120, 120, 0.8);
@@ -8,10 +9,13 @@
     span {
         font-size: 24px;
         margin-left: 16px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
     }
     img {
-        width: 70px;
-        height: 70px;
+        width: 50px;
+        height: 50px;
         object-fit: cover;
         border-radius: 100%;
     }
