--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -32,7 +32,9 @@
 </div>
 
 <app-game-info *ngIf="!gameOver" [card]="game.currentCard" class="pin-bottom"></app-game-info>
-
-<button *ngIf="!gameOver" mat-fab color="primary" (click)="openDialog()" class="btn-add">
+<div class="all-btn">
+    <button class="invite-btn" mat-raised-button color="primary" [cdkCopyToClipboard]="value" (click)="openSnackBar('Link is Copied')">Invite</button>
+    <button *ngIf="!gameOver" mat-fab color="primary" (click)="openDialog()" class="btn-add">
     <mat-icon>add</mat-icon>
   </button>
+</div>
