new start screen, add two player function

--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -8,6 +8,7 @@
     border-bottom-left-radius: 50px;
     span {
         font-size: 24px;
+        padding: 4px;
         margin-left: 16px;
         text-overflow: ellipsis;
         white-space: nowrap;
