--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -1,9 +1,14 @@
 <div class="start-screen">
-    <img src="assets/img/startbox.png">
+
 
 
     <div class="start-lable-box">
-        <img (click)="newGame()" src="assets/img/startlabel.png">
-    </div>
+        <h1>RING OF FIRE</h1>
+        <div class="btn-container">
+            <button (click)="newGame()">START</button>
+            <button (click)="newGame()">INFO</button>
+        </div>
+        <!--  <img (click)="newGame()" src="assets/img/startlabel.png">
+    --></div>
 
 </div>
