--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -33,7 +33,7 @@
 
 <app-game-info *ngIf="!gameOver" [card]="game.currentCard" class="pin-bottom"></app-game-info>
 <div class="all-btn">
-    <button class="invite-btn" mat-raised-button color="primary" [cdkCopyToClipboard]="value" (click)="openSnackBar('Link is Copied')">Invite</button>
+    <button *ngIf="!gameOver" class="invite-btn" mat-raised-button color="primary" [cdkCopyToClipboard]="value" (click)="openSnackBar('Link is Copied')">Invite</button>
     <button *ngIf="!gameOver" mat-fab color="primary" (click)="openDialog()" class="btn-add">
     <mat-icon>add</mat-icon>
   </button>
