--- a/src/app/start-screen/start-screen.component.scss
+++ b/src/app/start-screen/start-screen.component.scss
@@ -1,36 +1,61 @@
-.start-screen {
-    background-color: #404040;
-    width: 100vw;
-    height: 100vh;
-    max-width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    @media(max-width: 900px) {
-        overflow: hidden;
-    }
-    img {
+    .start-screen {
+        background-color: #404040;
+        background-image: url(/assets/img/start-screen.jpg);
         height: 100vh;
-    }
-}
-
-.start-lable-box {
-    position: absolute;
-    left: 0;
-    right: 0;
-    display: flex;
-    justify-content: center;
-    bottom: 60px;
-    img {
-        width: 30vw;
-        height: auto;
+        max-width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
         @media(max-width: 900px) {
-            width: 400px;
+            overflow: hidden;
         }
-        &:hover {
-            transition: all 225ms ease-in-out;
-            filter: brightness(1.25);
-            cursor: pointer;
+        img {
+            height: 100vh;
         }
     }
-}
+    
+    h1 {
+        margin-block-start: 0.0em;
+        margin-block-end: 0.0em;
+        font-size: 64px;
+        color: gold;
+        font-weight: 800;
+    }
+    
+    @media(max-width: 720px) {
+        h1 {
+            font-size: 48px;
+        }
+    }
+    
+    .btn-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-top: 24px;
+        button {
+            cursor: pointer;
+            font-size: 24px;
+            font-weight: 600;
+            margin-top: 36px;
+            height: 60px;
+            width: 250px;
+            color: gold;
+            background-color: transparent;
+            border: 4px solid gold;
+            border-radius: 5px;
+            transition: all 225ms ease-in-out;
+            &:hover {
+                background-color: gold;
+                color: black;
+            }
+            @media(max-width: 720px) {
+                font-size: 20px;
+                width: 120;
+                height: 60px;
+            }
+        }
+    }
