new function edit picture

--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -6,9 +6,8 @@
         <h1>RING OF FIRE</h1>
         <div class="btn-container">
             <button (click)="newGame()">START</button>
-            <button (click)="newGame()">INFO</button>
+            <button (click)="openInfo()">INFO</button>
         </div>
-        <!--  <img (click)="newGame()" src="assets/img/startlabel.png">
-    --></div>
+    </div>
 
 </div>
