--- a/src/app/dialog-add-player/dialog-add-player.component.html
+++ b/src/app/dialog-add-player/dialog-add-player.component.html
@@ -1,10 +1,16 @@
-<h1 mat-dialog-title>Add new player</h1>
-<div mat-dialog-content>
+<h1 mat-dialog-title>
+
+    Add new player</h1>
+<div mat-dialog-content class="dialog">
     <p>Please enter the name of a player</p>
     <mat-form-field appearance="fill">
         <mat-label>Name</mat-label>
         <input matInput [(ngModel)]="name"> </mat-form-field>
+    <div class="img">
+        <img [(ngModel)]="picture" class="profil-picture" [mat-dialog-close]="picture" *ngFor="let picture of allProfilePictures" src="assets/img/profile/{{ picture }} ">
+    </div>
 </div>
+
 <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">No Thanks</button>
     <button mat-button [disabled]="name.length == 0" [mat-dialog-close]="name" cdkFocusInitial>Ok</button>
