--- a/src/app/info-dialog/info-dialog.component.html
+++ b/src/app/info-dialog/info-dialog.component.html
@@ -1,3 +1,5 @@
+<div class="">
+
 <h1 mat-dialog-title>
     Game Info</h1>
 <div mat-dialog-content>
@@ -9,5 +11,5 @@
 
 <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">Close</button>
-
+</div>
 </div>
