--- a/src/app/alert-number-player/alert-number-player.component.html
+++ b/src/app/alert-number-player/alert-number-player.component.html
@@ -1,7 +1,7 @@
 <h1 mat-dialog-title>
     Attention</h1>
 <div mat-dialog-content>
-    <p>To play Ring of Fire you must be mindset in pairs. The more players play, the more fun.</p>
+    <p>To play Ring of Fire you need two players. The more players play, the more fun.</p>
     <p> <b>With the plus symbol you can add players.</b></p>
 </div>
 
